--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,7 +24,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v3
         with:
-          images: unusualnorm/omnom
+          images: unusualnorm/localtonet
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
